# instructor

./: .coveragerc  .env.tests  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  404.html  CLAUDE.md  CNAME  CONTRIBUTING.md  PR_6_SUMMARY.md  README.md  base.py  build_mkdocs.sh  citation_fuzzy_match.py  conftest.py  docs_todo.md  ellipsis.yaml  example_segmentation.py  index.html  instructor_optimization_plan.md  main.py  make_desc.py  make_descriptions.py  make_sitemap.py  mkdocs.yml  objects.inv  openai_function_call.py  parse_recursive_paths.py  patch.md  pr_body.md  provider_refactor_summary.md  pyproject.toml  pyrightconfig.json  pytest.ini  query_planner_execution.py  question_answer_subquery.py  requirements-dev.txt  requirements-doc.txt  requirements-examples.txt  (+17 more)
.cursor/rules/: documentation-sync.mdc  followups.mdc  new-features-planning.mdc  readme.md  simple-language.mdc
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ai-label.yml  claude.yml  evals.yml  mkdocs  mkdocs.yml  mypy.yml  pyright.yml  python-publish.yml  ruff.yml  stale.sh  test.yml  test_docs.yml
.grit/: .gitignore  grit.yaml
api/: index.html
blog/: index.html
cli/: index.html
cli/batch/: index.html
cli/finetune/: index.html
cli/usage/: index.html
concepts/: index.html
concepts/alias/: index.html
concepts/caching/: index.html
concepts/distillation/: index.html
concepts/enums/: index.html
concepts/fastapi/: index.html
concepts/fields/: index.html
concepts/lists/: index.html
concepts/logging/: index.html
concepts/maybe/: index.html
concepts/models/: index.html
concepts/multimodal/: index.html
concepts/parallel/: index.html
concepts/partial/: index.html
concepts/patching/: index.html
concepts/philosophy/: index.html
concepts/prompt_caching/: index.html
concepts/prompting/: index.html
concepts/raw_response/: index.html
concepts/reask_validation/: index.html
concepts/retrying/: index.html
concepts/templating/: index.html
concepts/typeadapter/: index.html
concepts/typeddicts/: index.html
concepts/types/: index.html
concepts/union/: index.html
concepts/usage/: index.html
contributing/: index.html
docs/: api.md  api_multitask.md  architecture.md  chat-completion.md  contributing.md  distilation.md  distillation.md  dsl.md  faq.md  finetune.md  getting-started.md  help.md  index.md  installation.md  llm.txt  maybe.md  modes-comparison.md  multitask.md  newsletter.md  openai_schema.md  patch.md  philosophy.md  pipeline-example.md  reask.md  reask_validation.md  repository-overview.md  start-here.md  validation.md  why.md  writing-prompts.md
docs/_hooks/: hide_lines.py  setup.py
docs/blog/: .authors.yml  index.md
docs/cli/: batch.md  finetune.md  index.md  usage.md
docs/concepts/: alias.md  api_consistency.md  caching.md  dictionary_operations.md  distillation.md  enums.md  error_handling.md  fastapi.md  field_streaming.md  fields.md  hooks.md  index.md  iterable.md  lists.md  logging.md  maybe.md  models.md  multimodal.md  multitask.md  parallel.md  partial.md  patching.md  pdf.md  philosophy.md  prompt_caching.md  prompting.md  providers.md  raw_response.md  reask_validation.md  retrying.md  semantic_validation.md  sqlmodel.md  streaming.md  templating.md  typeadapter.md  typeddicts.md  types.md  union.md  unions.md  (+3 more)
examples/: index.html
help/: index.html
hub/: index.html
installation/: index.html
instructor/: __init__.py  anthropic_utils.py  auto_client.py  batch.py  chat.py  client.py  client_anthropic.py  client_bedrock.py  client_cerebras.py  client_cohere.py  client_fireworks.py  client_gemini.py  client_genai.py  client_groq.py  client_mistral.py  client_ollama.py  client_perplexity.py  client_reka.py  client_sambanova.py  client_vertexai.py  client_watsonx.py  client_writer.py  completions.py  decorators.py  distil.py  eventemitter.py  exceptions.py  function_calls.py  hooks.py  llama_wrapper.py  messages_middleware.py  mode.py  models.py  multimodal.py  patch.py  process_response.py  process_response_compat.py  process_response_refactored.py  provider_utils.py  reask.py  (+8 more)
instructor-hub-proxy/: create.sql  package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
jobs/: index.html
newsletter/: index.html
openai_function_call/: __init__.py  function_calls.py  patch.py
overrides/: main.html
prompting/: index.html
scripts/: update_model_references.py
search/: search_index.json
test_clients/: __init__.py  anthropic_test.py  anyscale_test.py  llama-cpp-python_test.py  llama_cpp.pyi  llama_cpp_python_test.py  llama_cpp_types.py  mistral_test.py  ollama_test.py  openai_test.py  py.typed  test_anthropic_examples.py  test_llama_basic.py  test_llama_examples.py  test_llama_instructor.py  test_ollama_examples.py  test_openai_examples.py  test_streaming.py  test_streaming_support.py
tests/: conftest.py  test_auto_client.py  test_cli.py  test_completion.py  test_deprecated_hub.py  test_dict_operations.py  test_dict_operations_validation.py  test_distil.py  test_dsl.py  test_dynamic_model_creation.py  test_fizzbuzz_fix.py  test_formatting.py  test_function_calls.py  test_genai_thought_parts.py  test_json_extraction.py  test_json_extraction_edge_cases.py  test_message_processing.py  test_messages.py  test_multimodal.py  test_multimodal_messages.py  test_multitask.py  test_new_client.py  test_patch.py  test_process_response.py  test_response_model_conversion.py  test_schema.py  test_simple_types.py  test_sql.py  test_token_details.py  test_utils.py  test_validators.py
tutorials/: 1.introduction.ipynb  2.applications-rag.ipynb  2.tips.ipynb  3.0.applications-rag.ipynb  3.1.validation-rag.ipynb  3.applications-rag.ipynb  4.knowledge-graphs.ipynb  4.validation.ipynb  5.validation.ipynb  6 - Chain Of Density Summarization.ipynb  6.chain-of-density.ipynb  README.md  helpers.py  index.html  pydantic.ipynb  requirements.txt
typings/: jsonref.pyi
wandb/: settings
why/: index.html
(+934 files in other folders)
