[project]
name = "instructor"
version = "1.7.0"
description = "structured outputs for llm"
authors = [{name = "Jason Liu", email = "jason@jxnl.co"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.52.0",
    "pydantic>=2.8.0",
    "docstring-parser>=0.16",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.1",
    "tenacity>=9.0.0,<10.0.0",
    "pydantic-core>=2.18.0",
    "jiter>=0.6.1,<0.7",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.36.2,<0.38.0", "xmltodict>=0.13,<0.15"]
groq = ["groq>=0.4.2,<0.12.0"]
cohere = ["cohere>=5.1.8"]
test-docs = [
    "fastapi>=0.109.2,<0.116.0",
    "redis>=5.0.1",
    "diskcache>=5.6.3",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "pydantic_extra_types>=2.6.0",
    "litellm>=1.35.31",
    "anthropic>=0.36.2,<0.38.0",
    "groq>=0.4.2,<0.12.0",
    "cohere>=5.1.8",
    "mistralai>=1.0.3",
    "phonenumbers>=8.13.33",
    "graphviz>=0.20.3",
    "sqlmodel>=0.0.22",
    "trafilatura>=1.12.2",
    "pydub>=0.25.1",
    "datasets>=3.0.1",
    "writer-sdk>=1.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-examples>=0.0.10",
]
mistralai = ["mistralai>=1.0.3"]
litellm = ["litellm>=1.35.31"]
google-generativeai = ["google-generativeai>=0.8.2"]
vertexai = ["google-cloud-aiplatform>=1.53.0", "jsonref>=1.1.0"]
cerebras_cloud_sdk = ["cerebras_cloud_sdk>=1.5.0"]
fireworks-ai = ["fireworks-ai>=0.15.4"]
writer = ["writer-sdk>=1.2.0"]

[project.scripts]
instructor = "instructor.cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["instructor"]

[tool.pyright]
include = ["instructor"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/tests/**",
]
pythonVersion = "3.9"
typeCheckingMode = "strict"
# Allow "redundant" runtime type-checking.
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "error"
